--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</li>
  	 		<li><A HREF = "Extracurricular.html">Extracurricular</A>
  	 		</li>
-			<li><A HREF = "Tech.html">Tech</A>
+			<li><A HREF = "tech.html">Tech</A>
 			</li>
 			</ul>
 		</div>
