--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 			<h1>Raiid Ahmed: The Blade Runner</h1>
 		</div>
 			<ul>
-			<li><A HREF = "Academics.html">Academics</A>
+			<li>
+				<A HREF = "Academics.html">Academics</A>
 			</li>
-  			<li><A HREF = "Athletics.html">Athletics</A>
+  			<li>
+  				<A HREF = "Athletics.html">Athletics</A>
 			</li>
- 	 		<li><A HREF = "Extracurricular.html">Extracurricular</A>
+ 	 		<li>
+ 	 			<A HREF = "Extracurricular.html">Extracurricular</A>
  	 		</li>
-			<li><A HREF = "tech.html">Tech</A>
+			<li>
+				<A HREF = "tech.html">tech</A>
 			</li>
 			</ul>
 		</div>
