--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  	 			<A HREF = "Extracurricular.html">Extracurricular</A>
  	 		</li>
 			<li>
-				<A HREF = "tech.html">tech</A>
+				<A HREF = "Tech.html">Tech</A>
 			</li>
 			</ul>
 		</div>
