--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 		<title> Raiid Ahmed bio </title>
 		<body>
-			<h1>Raiid Ahmed: The Blade Runner</h1>
+			<h1>Raiid Ahmed</h1>
 		</div>
 			<ul>
 			<li>
