--- a/Academics.html
+++ b/Academics.html
@@ -10,11 +10,13 @@
 			Grade info
 			<ul>
 			<li>2180 SAT</li>
-			<li>3.7 GPA</li>
-			<li>2 AP classes</li>
+			<li>3.8 GPA</li>
+			<li>5 On AP Calc AB test</li>
 			<li>Honor Roll Student</li>
+			<li>National Honor Society Member</li>
 			<li>Member of East Brunswick Code Club and EBTECS</li>
 			<li>Varsity Letter Winner in Cross Country and Track and Field</li>
+			<li>Captain of Varsity Cross Country and Track and Field</li>
 			</ul>
 			<A HREF = "index.html">Back to Main Page</A>
 		</body>
