--- a/Extracurricular.html
+++ b/Extracurricular.html
@@ -9,15 +9,14 @@
 			<P>I have served the community of East Brunswick on multiple occasions through many different ways. I have also been a part of many clubs throughout my highschool career many of them focused on programming and electronics.</P>
 			<ul>
 			<li>Volunteered for East Brunswick Youth Track and Field 2015-2016</li>
-			<li>Volunteered and helped organize EB Hour of Code 2016</li>
+			<li>Volunteered and helped organize EB Hour of Code 2015</li>
 			<P><A HREF = "http://ebhourofcode.com/">Link To East Brunswick Hour of Code Page</A></P>
 			<li>Volunteered for Muslims Against Hunger Summer 2015</li>
-			<li>Founding member of RevDynamics</li>
-			<P><A HREF = "http://rlxamerica.wix.com/revdynamics">Link To RevDynamics Page</A></P>
+			<li>Founding member of EB First Robotics Team</li>
 			<li>Volunteered for MCMC Sundayschool 2014-2015</li>
 			<li>Taught and obsereved middle school aged children in rural Bangladesh 2013</li>
+			<li>Worked for Middlesex County Conservation Corps in summer 2016</li>
 			</ul>
 			<A HREF = "index.html">Back to Main Page</A>
 		</body>
-	</head>
 </html>
